[gd_scene load_steps=8 format=3 uid="uid://brl8png5jklap"]

[ext_resource type="Texture2D" uid="uid://ds5blhdolme7v" path="res://asset/img/ui/battery_over.png" id="1_virdg"]
[ext_resource type="Script" path="res://src/furniture/PowerRestoreGame.gd" id="1_xbebq"]
[ext_resource type="Texture2D" uid="uid://h6bf2tlmmfmr" path="res://asset/img/ui/battery_progress.png" id="2_mqe08"]
[ext_resource type="AudioStream" uid="uid://cwl1d0k1q6287" path="res://asset/sound/effect/charge_sound.wav" id="4_g85rm"]
[ext_resource type="AudioStream" uid="uid://rju0nqykh4q4" path="res://asset/sound/effect/charge_fail_sound.wav" id="5_b0121"]
[ext_resource type="FontFile" uid="uid://dlb3dglxf7aok" path="res://asset/font/Cubic.ttf" id="6_u1x2m"]

[sub_resource type="LabelSettings" id="LabelSettings_m5xg4"]
font = ExtResource("6_u1x2m")
font_size = 48

[node name="PowerRestoreGame" type="CanvasLayer"]
script = ExtResource("1_xbebq")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -298.0
offset_right = 194.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
step = 0.01
allow_greater = true
fill_mode = 3
nine_patch_stretch = true
texture_over = ExtResource("1_virdg")
texture_progress = ExtResource("2_mqe08")

[node name="ChargeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_g85rm")

[node name="ChargeFailSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_b0121")

[node name="Label" type="Label" parent="."]
offset_left = 510.0
offset_top = 58.0
offset_right = 926.0
offset_bottom = 117.0
text = "你需要疯狂按空格"
label_settings = SubResource("LabelSettings_m5xg4")
horizontal_alignment = 1

[connection signal="value_changed" from="TextureProgressBar" to="." method="_on_texture_progress_bar_value_changed"]
[connection signal="finished" from="ChargeSound" to="." method="_on_charge_sound_finished"]
